<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- ================================================================
         PARENT : Spring Boot BOM (gestion des versions Spring)
         ================================================================ -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/>
    </parent>

    <!-- ================================================================
         IDENTITÉ DU PROJET PARENT
         ================================================================ -->
    <groupId>tn.iteam</groupId>
    <artifactId>talent-connect</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>TalentConnect :: Parent</name>
    <description>TalentConnect – Plateforme Microservices – Parent POM</description>

    <!-- ================================================================
         MODULES (microservices)
         ================================================================ -->
    <modules>
        <module>auth-service</module>
        <module>candidatures-service</module>
        <module>chatbot-service</module>
        <module>job-service</module>
    </modules>

    <!-- ================================================================
         PROPRIÉTÉS COMMUNES
         ================================================================ -->
    <properties>
        <!-- Java -->
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Versions des dépendances tierces -->
        <jjwt.version>0.12.6</jjwt.version>
        <springdoc.version>2.8.0</springdoc.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <jacoco.version>0.8.12</jacoco.version>

        <!-- SonarCloud -->
        <sonar.organization>amiraanefzi</sonar.organization>
        <sonar.projectKey>TalentConnect-App</sonar.projectKey>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <!-- Chemin relatif au dossier de chaque module – fonctionne pour le multi-module -->
        <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
    </properties>

    <!-- ================================================================
         GESTION CENTRALISÉE DES DÉPENDANCES
         Les modules déclarent la dépendance SANS version.
         ================================================================ -->
    <dependencyManagement>
        <dependencies>

            <!-- JWT -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>

            <!-- SpringDoc OpenAPI (Swagger UI) -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <!-- ================================================================
         GESTION CENTRALISÉE DES PLUGINS
         Les modules référencent les plugins SANS répéter la config.
         ================================================================ -->
    <build>
        <pluginManagement>
            <plugins>

                <!-- Spring Boot : repackage + exclusion Lombok du JAR final -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>

                <!-- Compiler Java avec Lombok + MapStruct en annotation processor -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <!-- JaCoCo : couverture de code (pour SonarCloud) -->
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                    <executions>
                        <execution>
                            <id>prepare-agent</id>
                            <goals><goal>prepare-agent</goal></goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>verify</phase>
                            <goals><goal>report</goal></goals>
                        </execution>
                    </executions>
                </plugin>

                <!-- Surefire : exécution des tests unitaires -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <useModulePath>false</useModulePath>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

</project>
